# qa-labeling

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
.dvc/: config
conf/: config.yaml
conf/data_loading/: data_loading.yaml
conf/inference/: inference.yaml
conf/logging/: logging.yaml
conf/model/: model.yaml
conf/training/: training.yaml
data_raw/: test.csv.dvc  train.csv.dvc  val.csv.dvc
qa_labeling/: config.py  dataset.py  export_to_onnx.py  infer.py  model.py  save_weights.py  train.py  utils.py
qa_labeling/pl_modules/: classifiers.py  data.py  infer.py  model.py
qa_labeling/scratch/: config.py  dataset.py  infer.py  model.py  train.py  utils.py
scripts/: download_data.py  test.ipynb
