[project]
name = "qa-labeling"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dvc>=3.59.2",
    "hydra-core>=1.3.2",
    "ipykernel>=6.29.5",
    "iterative-stratification>=0.1.9",
    "lightning>=2.5.1.post0",
    "mlflow>=2.22.0",
    "numpy<2",
    "onnx>=1.18.0",
    "onnxruntime>=1.22.0",
    "pandas>=2.2.3",
    "pre-commit>=4.2.0",
    "requests>=2.32.3",
    "scipy>=1.15.3",
    "torch==2.2",
    "tqdm>=4.67.1",
    "transformers>=4.52.4",
]

[tool.setuptools]
py-modules = []
